# AgrobotV2

./: .bazelrc  .dockerignore  .env.example  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPRODUCE.md  WORKSPACE.bazel  compose.sh  requirements.in  requirements_lock.txt
.cursor/rules/: agrobot-context.mdc  python-standards.mdc  workflow.mdc
.github/workflows/: ci.yml
data/: README.md  val_gt.csv  val_list.txt
deployment/: BUILD.bazel
deployment/compose/: docker-compose.yml
deployment/docker/: Dockerfile.cuda  Dockerfile.dev  Dockerfile.rocm  entrypoint.sh  run_rocm.sh
docs/: FAILURE_MODES.md  GRAND_PLAN.md  HIL_RESULTS.md  MAP_IMPROVEMENT_ROADMAP.md  PROJECT_ROADMAP.md  SPRINT3_ROCM_ISSUE.md  SPRINT3_ROCM_UPGRADE.md  SPRINT4_ARCHITECTURE.md
models/: README.md
perception/: BUILD.bazel  package.xml  setup.cfg  setup.py
perception/agrobot_perception/: __init__.py  qwen_vl_node.py  tomato_detector_node.py  tomato_spatial_node.py  tomato_tracker_node.py
perception/agrobot_perception/detectors/: __init__.py  dino_sam2_detector.py  sam2_amg_detector.py  sam2_semantic_detector.py
perception/agrobot_perception/utils/: __init__.py  image_utils.py  pointcloud_utils.py
perception/eval/: __init__.py  metrics.py  run_eval.py  visualize.py
perception/launch/: perception.launch.py
perception/tests/: test_image_utils.py
perception/tools/: build_query_embedding.py  build_val_gt_csv.py  compile_migraphx.py  export_dino_onnx.py  finetune_dino_lora.py  finetune_sam2_decoder.py  finetune_sam2_polygon.py  mine_hard_negatives.py
planning/: BUILD.bazel
sim_models/: agrobotv2.xacro  bot.urdf  robot_params.yaml
simulation/: BUILD.bazel
tools/: BUILD.bazel  pull_crops.sh  save_spatial_crops.py  test_qwen_vl.py
tools/network/: BUILD.bazel  ros2_dds_profile.xml  tailscale_acl.json
tools/network/setup/: amd_edge_setup.sh  hpc_setup.sh  mac_setup.sh  model_sync.sh  verify_mesh.sh
