###############################################################################
# perception/BUILD.bazel — Bazel Build Targets for the Perception Package
#
# This is the Bazel manifest for agrobot_perception. It exists alongside
# package.xml (ROS 2 / colcon) — they describe the same package to different
# toolchains and do not conflict.
#
# Target naming convention:
#   //perception:image_utils       → py_library (importable by other packages)
#   //perception:tomato_detector   → py_binary (runnable executable)
#   //perception:perception_test   → py_test (unit tests)
###############################################################################

package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# ─── image_utils: Image Preprocessing Library ─────────────────────────────────
#
# A `py_library` is NOT executable — it's a reusable module that other targets
# can depend on. Bazel tracks exactly which files it contains and verifies that
# no target imports a library it didn't declare as a dep.
#
# deps on @agrobot_pip//numpy and @agrobot_pip//opencv-python-headless:
#   These are pip packages declared in MODULE.bazel. Bazel downloads them
#   hermetically rather than using your system numpy/cv2 installation.
#   This guarantees the same numpy version runs on your Mac AND on the HPC.
py_library(
    name = "image_utils",
    srcs = ["agrobot_perception/utils/image_utils.py"],
    imports = ["."],  # Adds perception/ to sys.path so `from agrobot_perception...` works.
    deps = [
        "@agrobot_pip//numpy",
        "@agrobot_pip//opencv-python-headless",
    ],
)

# ─── agrobot_perception_lib: Core Package Library ─────────────────────────────
#
# Bundles all Python source files in the package (excluding the node entry point).
# Other packages (e.g., //planning) can depend on this to reuse detection logic.
py_library(
    name = "agrobot_perception_lib",
    srcs = [
        "agrobot_perception/__init__.py",
        "agrobot_perception/utils/__init__.py",
    ],
    deps = [":image_utils"],
    imports = ["."],
)

# ─── tomato_detector: Main ROS 2 Node Binary ─────────────────────────────────
#
# A `py_binary` IS executable: `bazel run //perception:tomato_detector`.
# Bazel creates a self-contained zip-like runfile tree with all deps bundled.
# When this runs inside the Docker container, it can `import rclpy` because
# the container has ROS 2 installed — but Bazel managed our custom deps.
#
# Note on rclpy/cv_bridge deps:
#   We do NOT declare rclpy as a Bazel dep here. rclpy is a system package
#   provided by the Docker container's ROS 2 installation. Declaring it in
#   Bazel would require building it from source (that's rules_ros2 territory).
#   Our pragmatic hybrid: Bazel builds OUR code, Docker provides the ROS 2 runtime.
py_binary(
    name = "tomato_detector",
    srcs = ["agrobot_perception/tomato_detector_node.py"],
    main = "agrobot_perception/tomato_detector_node.py",
    deps = [
        ":agrobot_perception_lib",
        ":image_utils",
        "@agrobot_pip//numpy",
        "@agrobot_pip//opencv-python-headless",
    ],
    imports = ["."],
    # Only build this target on Linux (it requires ROS 2 at runtime).
    # On your Mac host (outside Docker), `bazel build` is still valid —
    # Bazel checks deps and syntax — but `bazel run` requires the container.
    target_compatible_with = ["@platforms//os:linux"],
)

# ─── image_utils_test: Unit Tests ────────────────────────────────────────────
#
# `py_test` targets run with `bazel test //perception:image_utils_test`.
# They are hermetically sandboxed: no network access, no filesystem writes
# outside the test's declared outputs. This guarantees tests are reproducible.
py_test(
    name = "image_utils_test",
    size = "small",     # "small" = must complete in <60s. Enforced by Bazel.
    srcs = ["tests/test_image_utils.py"],
    deps = [
        ":image_utils",
        "@agrobot_pip//numpy",
        "@agrobot_pip//opencv-python-headless",
        "@agrobot_pip//pytest",
    ],
    imports = ["."],
)
